z-index fixed for sub menu

--- a/src/shop-frontend/resources/styles/components/book-details-view.less
+++ b/src/shop-frontend/resources/styles/components/book-details-view.less
@@ -14,6 +14,7 @@
   .book-details-bg{
     background: #FFF;
     z-index: 1;
+    opacity: 0.7;
     border-radius: 4px;
     position: absolute;
     top: 0;
