--- a/src/shop-frontend/resources/styles/components/sub-menu-view.less
+++ b/src/shop-frontend/resources/styles/components/sub-menu-view.less
@@ -2,7 +2,7 @@
 
 .sub-menu{
   position: relative;
-  z-index: 1;
+  z-index: 3;
 }
 
 .sub-menu-view{
